# partial-evaluation

./: Curry.hs  Grin.hs  LICENSE  NOTES  ParseMegaparsec.hs  Reduce.hs  ReduceTest.hs  TODO  ToReduce.hs  benchmark01.lc  bug01.lc  def01.lc  def02.lc  ok1.lc  partial-evaluation.cabal  simple01.lc  simple03.lc  simple04.lc  simple05.lc  simple06.lc  simple07.lc  simple09.lc  speedTest.hs  stack.yaml
grin/: Grin.hs  ParseGrin.hs  ReduceGrin.hs  TODO  speed.hs  sum_opt.grin  sum_opt.grin.syntax  sum_simple.grin  sum_simple.grin.syntax
