name:                partial-evaluation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/csabahruska/partial-evaluation
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           2018 Csaba Hruska
category:            Compiler
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:
    Reduce
    ReduceTest
    Curry
    ParseMegaparsec
    ToReduce

  build-depends:
    base,
    containers,
    mtl,
    text,
    pretty-show,
    megaparsec

  default-language:    Haskell2010
